--- a/stylesheets/gallomatic.sass
+++ b/stylesheets/gallomatic.sass
@@ -24,6 +24,7 @@ $bg_color: black
 
 html
   height: 100%
+  font-size: 62.5%
 
 body
   background-color: $bg_color
@@ -62,16 +63,21 @@ table#frontpage
   height: 100%
   margin: 0 auto
   h1
-    font-size: 70px
+    font-size: 10rem
+    margin-bottom: 10px
   h2
-    font-size: 40px
+    font-size: 4rem
+  h3
+    font-size: 1.8rem
+    font-style: italic
+    margin-bottom: 60px
   .icon
     height: 40%
   a
     margin-top: 20px
-    font-size: 60px
+    font-size: 6rem
     &:hover
-      font-size: 70px
+      font-size: 7rem
 
 #images_container
   .image_table
@@ -87,14 +93,14 @@ table#frontpage
     .control_fw,.control_bw
       min-width: 70px
       a
-        font-size: 50px
+        font-size: 5rem
         &:hover
-          font-size: 60px
+          font-size: 6rem
     .image_info
       border-top: 2px solid $fg_color
       color: $fg_color
       text-align: left
-      font-size: 16px
+      font-size: 1.6rem
       height: 100px
       table
         height: 100%
@@ -112,7 +118,7 @@ table#frontpage
       .page_count
         width: 50px
         text-align: right
-        font-size: 20px
+        font-size: 2rem
         font-weight: bold
         padding-right: 10px
     .image_actions
@@ -124,14 +130,14 @@ table#frontpage
         min-width: 60px
         height: 100%
         a
-          font-size: 40px
+          font-size: 4rem
           margin-left: 3px
           margin-right: 3px
           &:hover
-            font-size: 50px
+            font-size: 5rem
       .help_text
         color: $fg_color
-        font-size: 12px
+        font-size: 1.2rem
         min-height: 18px
         height: 18px
         overflow: hidden
